--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
     <section class="about" id="about">
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
-            <p>I am a passionate graphic designer and front-end web developer with expertise in UI/UX design. I possess
+            <p>"I am a passionate graphic designer and front-end web developer with expertise in UI/UX design. I possess
                 a strong aptitude for crafting cohesive user experiences that seamlessly blend functionality
                 and design. I embrace challenging projects that inspire creative thinking and enable me to deliver
                 innovative solutions beyond expectations. With a deep commitment to my craft, I continuously strive to
-                refine my skills and stay abreast of industry trends.</p>
+                refine my skills and stay abreast of industry trends."</p>
             <a href="#contact" class="btn-about">Contact Me</a>
         </div>
     </section>
